--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,28 @@
 {
     "compilerOptions": {
-      "target": "esnext",
-      "useDefineForClassFields": true,
-      "lib": ["esnext"],
-      "allowJs": false,
-      "skipLibCheck": true,
-      "esModuleInterop": true,
-      "allowSyntheticDefaultImports": true,
-      "strict": true,
-      "forceConsistentCasingInFileNames": true,
-      "module": "esnext",
-      "moduleResolution": "node",
-      "resolveJsonModule": true,
-      "isolatedModules": true,
-      "declaration": true,
-      "outDir": "dist",
-      "experimentalDecorators": true
+        "target": "esnext",
+        "useDefineForClassFields": true,
+        "lib": [
+            "esnext"
+        ],
+        "allowJs": false,
+        "skipLibCheck": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "strict": true,
+        "forceConsistentCasingInFileNames": true,
+        "module": "esnext",
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "declaration": true,
+        "outDir": "dist",
+        "experimentalDecorators": true
     },
-    "include": ["src/*"],
-    "exclude": ["node_modules"]
-  }
-  
+    "include": [
+        "src/*"
+    ],
+    "exclude": [
+        "node_modules"
+    ]
+}
