--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "target": "esnext",
         "useDefineForClassFields": true,
         "lib": [
-            "esnext"
+            "esnext",
+            "dom"
         ],
         "allowJs": false,
         "skipLibCheck": true,
