--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
         "dist"
     ],
     "scripts": {
-        "dev": "rollup -c rollup.config.ts --watch",
-        "build": "npm run clean && cross-env NODE_ENV=production rollup -c rollup.config.ts",
+        "build": "npm run clean && cross-env NODE_ENV=production rm -rf dist && tsc -p .",
         "clean": "rimraf dist/"
     },
     "dependencies": {
